added icky clicky

--- a/projects.html
+++ b/projects.html
@@ -1,208 +1,307 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">	
-		<meta name=“author" content=“Katy Cassidy | ihatetoast">
-		<title>Katy Cassidy | Works</title>
-		<link href="https://fonts.googleapis.com/css?family=Asul|Chivo" rel="stylesheet">
-		<link rel="stylesheet" href="./assets/styles/reset.css">
-		<link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	</head>
-	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
-	<body>
-		<header>
-			<div class="content-header">
-				<div class="brand">
-					<div class="name">
-						<h1>Katy <div id="ihtlogo"><img  src="./assets/images/ihtLogo.png" alt="greyhound eating toast">
-						</div> Cassidy</h1>
-					</div>
-				</div>
-				<nav>
-					<ul id="navLinks">
-						<li><a class="inactive" href="./index.html">about</a></li>
-						<li><a class="active" href="./projects.html">portfolio</a></li>
-						<li><a class="inactive" href="./contact.html">contact</a></li>
-					</ul>
-				</nav>
-			</div>
-    </header>
-      <main class="portMain">
-        <article class="portContent">
-          <h3 class="titleHeader">Projects: Some big, some small, all fun</h3>
-          <hr>
-          <!-- DOUBLE DATA -->
-			    <div class="projectHolder">
-            <div class="projectFrame">
-              <div class="portfolio">
-                <img src="./assets/images/doubledata.png" alt="screenshot of survey and photo of match">
-                <a href="https://ihatetoast-doubledata.herokuapp.com" target="_blank">
-                </a>
-              </div>
-              <div class="titleBar"><p>Double Data</p></div>
-              <div class="projectLinks">
-                <ul>
-                  <li><a href="https://ihatetoast-doubledata.herokuapp.com" target="_blank">Heroku</a></li>
-                  <li><a href="https://github.com/ihatetoast/friendfinder" target="_blank">Code</a></li>
-                </ul>
-              </div>
-            </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name=“author " content=“Katy Cassidy | ihatetoast">
+  <title>Katy Cassidy | Works</title>
+  <link href="https://fonts.googleapis.com/css?family=Asul|Chivo" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/styles/reset.css">
+  <link rel="stylesheet" href="./assets/styles/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
-
-            <!-- F THOSE UFOS -->
-            <div class="projectFrame">
-                <div class="portfolio">
-                  <img src="./assets/images/fthoseufos.png" alt="screenshot of text of a todo list">
-                  <a href="https://ihatetoast-fthoseufos.herokuapp.com/" target="_blank">
-                  </a>
-                </div>
-                <div class="titleBar"><p>F Those UFOs</p></div>
-                <div class="projectLinks">
-                  <ul>
-                    <li><a href="https://ihatetoast-fthoseufos.herokuapp.com/ " target="_blank">Heroku</a></li>
-                    <li><a href="https://github.com/ihatetoast/burgerhitlist" target="_blank">Code</a></li>
-                  </ul>
-                </div>
-              </div>
-            <!-- CLINGMAN: HANGMAN IN THE CLI -->
-            <div class="projectFrame">
-                <div class="portfolio">
-                  <img src="assets/clingman-app.gif" alt="gif of code being executed">
-                  <a href="https://github.com/ihatetoast/cli_hangman">
-                  </a>
-                </div>
-                <div class="titleBar"><p>CLIngman</p></div>
-                <div class="projectLinks">
-                  <ul>
-                    <li>Demo above</li>
-                    <li><a href="https://github.com/ihatetoast/cli_hangman" target="_blank">Code</a></li>
-                  </ul>
-                </div>
-              </div>
+<body>
+  <header>
+    <div class="content-header">
+      <div class="brand">
+        <div class="name">
+          <h1>Katy
+            <div id="ihtlogo">
+              <img src="./assets/images/ihtLogo.png" alt="greyhound eating toast">
+            </div> Cassidy</h1>
+        </div>
+      </div>
+      <nav>
+        <ul id="navLinks">
+          <li>
+            <a class="inactive" href="./index.html">about</a>
+          </li>
+          <li>
+            <a class="active" href="./projects.html">portfolio</a>
+          </li>
+          <li>
+            <a class="inactive" href="./contact.html">contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="portMain">
+    <article class="portContent">
+      <h3 class="titleHeader">Projects: Some big, some small, all fun</h3>
+      <hr>
 
 
 
-            <!-- LIRI -->
-            <div class="projectFrame">
-              <div class="portfolio">
-                <img src="assets/liri-app.gif" alt="gif of code being executed">
-                <a href="https://github.com/ihatetoast/liri-node-app">
-                </a>
-              </div>
-              <div class="titleBar"><p>LIRI</p></div>
-              <div class="projectLinks">
-                <ul>
-                  <li>Demo above</a></li>
-                  <li><a href="https://github.com/ihatetoast/liri-node-app" target="_blank">Code</a></li>
-                </ul>
-              </div>
-            </div>
+      <div class="projectHolder">
 
-            <!-- HANGMAN -->
-            <div class="projectFrame">
-              <div class="portfolio">
-                <img src="assets/images/hangman.svg" alt="hangman game">
-                <a href=" http://www.ihatetoast.com/hangman-game/">
-                </a>
-              </div>
-              <div class="titleBar"><p>HANGMAN</p></div>
-              <div class="projectLinks">
-                <ul>
-                  <li><a href="http://www.ihatetoast.com/hangman-game/" target="_blank">Play</a></li>
-                  <li><a href="https://github.com/ihatetoast/hangman-game" target="_blank">Code</a></li>
-                </ul>
-              </div>
-            </div>
 
-          <!-- THANKSGIVING -->
-            <div class="projectFrame">
-              <div class="portfolio">
-                <img src="./assets/images/thanksgiving.png" alt="a stomach and a plate">
-                <a href="http://www.ihatetoast.com/week-4-game/" target="_blank">
-                </a>
-              </div>
-              <div class="titleBar"><p>BELLY BUSTER</p></div>
-              <div class="projectLinks">
-                <ul>
-                  <li><a href="http://www.ihatetoast.com/week-4-game/" target="_blank">Eat up</a></li>
-                  <li><a href="https://github.com/ihatetoast/week-4-game" target="_blank">Code</a></li>
-                </ul>
-              </div>
-
-            </div>
-            <!-- PURE CSS IMAGES -->
-            <div class="projectFrame">
-              <div class="portfolio">
-                <img src="./assets/images/day49.png" alt="dance dance revolution pad">
-                <a href="http://ihatetoast-css-images.surge.sh/" target="_blank">
-                <p>50 CSS IMAGES</p>
-                </a>
-              </div>
-              <div class="titleBar"><p>50 CSS IMAGES</p></div>
-              <div class="projectLinks">
-                <ul>
-                  <li><a href="http://ihatetoast-css-images.surge.sh/" target="_blank">Log</a></li>
-                  <li><a href="https://codepen.io/collection/ABQNGQ/" target="_blank">Code</a></li>
-                </ul>
-              </div>
-            </div>
-
-            <!-- EGGS FOX FEATHERS: RPS -->
-            <div class="projectFrame">
-              <div class="portfolio">
-                <img src="./assets/images/eggfoxfeathers.svg" alt="Foxes, eggs, and feathers in varying states of discomfort">
-                <a href="http://www.ihatetoast.com/eggfoxfeathers/" target="_blank">
-                </a>
-              </div>
-              <div class="titleBar"><p>EGGS FOX FEATHERS</p></div>
-              <div class="projectLinks">
-                <ul>
-                  <li><a href="http://ihatetoast-eggfeathersfox.surge.sh/" target="_blank">Play</a></li>
-                  <li><a href="https://github.com/ihatetoast/eggfoxfeathers" target="_blank">Code</a></li>
-                </ul>
-              </div>
-            </div>
-
-             <!-- REACT: CRITTER SITTER -->
-            <div class="projectFrame">
-              <div class="portfolio">
-                <img src="./assets/images/stan.jpg" alt="a woman kissing a greyhound">
-                <a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">
-                </a>
-              </div>
-              <div class="titleBar"><p>CRITTER SITTER</p></div>
-              <div class="projectLinks">
-                <ul>
-                  <li><a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">Demo</a></li>
-                  <li><a href="https://github.com/ihatetoast/CritterSitter" target="_blank">Code</a></li>
-                </ul>
-              </div>
-            </div>
-
-            <!-- DODGY HAROLD -->
-            <div class="projectFrame">
-              <div class="portfolio">
-                <img src="./assets/images/creepyman.svg" alt="a man in a blue hoodie">
-                <a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">
-                </a>
-              </div>
-              <div class="titleBar"><p>DODGY HAROLD</p></div>
-              <div class="projectLinks">
-                <ul>
-                  <li><a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">Get Advice</a></li>
-                  <li><a href="https://github.com/ihatetoast/creepyman-advice" target="_blank">Code</a></li>
-                </ul>
-              </div>
-            </div>
+        <!-- ICKY CLICKY -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="./assets/images/ickies.svg" alt="screenshot of text of a todo list">
+            <a href="http://www.ihatetoast.com/ickyclicky/" target="_blank">
+            </a>
           </div>
-        </article>
+          <div class="titleBar">
+            <p>Icky Clicky</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="http://www.ihatetoast.com/ickyclicky/" target="_blank">Play!</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/ickyclicky" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
-      </main> <!-- end port main-->
-    </div> <!--end site-content-->
-	</body>
+
+
+        <!-- DOUBLE DATA -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="./assets/images/doubledata.png" alt="screenshot of survey and photo of match">
+            <a href="https://ihatetoast-doubledata.herokuapp.com" target="_blank">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>Double Data</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="https://ihatetoast-doubledata.herokuapp.com" target="_blank">Heroku</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/friendfinder" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+
+        <!-- F THOSE UFOS -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="./assets/images/fthoseufos.png" alt="screenshot of text of a todo list">
+            <a href="https://ihatetoast-fthoseufos.herokuapp.com/" target="_blank">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>F Those UFOs</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="https://ihatetoast-fthoseufos.herokuapp.com/ " target="_blank">Heroku</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/burgerhitlist" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- CLINGMAN: HANGMAN IN THE CLI -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="assets/clingman-app.gif" alt="gif of code being executed">
+            <a href="https://github.com/ihatetoast/cli_hangman">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>CLIngman</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>Demo above</li>
+              <li>
+                <a href="https://github.com/ihatetoast/cli_hangman" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+
+
+        <!-- LIRI -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="assets/liri-app.gif" alt="gif of code being executed">
+            <a href="https://github.com/ihatetoast/liri-node-app">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>LIRI</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>Demo above</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/liri-node-app" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- HANGMAN -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="assets/images/hangman.svg" alt="hangman game">
+            <a href=" http://www.ihatetoast.com/hangman-game/">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>HANGMAN</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="http://www.ihatetoast.com/hangman-game/" target="_blank">Play</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/hangman-game" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- THANKSGIVING -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="./assets/images/thanksgiving.png" alt="a stomach and a plate">
+            <a href="http://www.ihatetoast.com/week-4-game/" target="_blank">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>BELLY BUSTER</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="http://www.ihatetoast.com/week-4-game/" target="_blank">Eat up</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/week-4-game" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+        <!-- PURE CSS IMAGES -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="./assets/images/day49.png" alt="dance dance revolution pad">
+            <a href="http://ihatetoast-css-images.surge.sh/" target="_blank">
+              <p>50 CSS IMAGES</p>
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>50 CSS IMAGES</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="http://ihatetoast-css-images.surge.sh/" target="_blank">Log</a>
+              </li>
+              <li>
+                <a href="https://codepen.io/collection/ABQNGQ/" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- EGGS FOX FEATHERS: RPS -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="./assets/images/eggfoxfeathers.svg" alt="Foxes, eggs, and feathers in varying states of discomfort">
+            <a href="http://www.ihatetoast.com/eggfoxfeathers/" target="_blank">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>EGGS FOX FEATHERS</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="http://ihatetoast-eggfeathersfox.surge.sh/" target="_blank">Play</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/eggfoxfeathers" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- REACT: CRITTER SITTER -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="./assets/images/stan.jpg" alt="a woman kissing a greyhound">
+            <a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>CRITTER SITTER</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">Demo</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/CritterSitter" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- DODGY HAROLD -->
+        <div class="projectFrame">
+          <div class="portfolio">
+            <img src="./assets/images/creepyman.svg" alt="a man in a blue hoodie">
+            <a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">
+            </a>
+          </div>
+          <div class="titleBar">
+            <p>DODGY HAROLD</p>
+          </div>
+          <div class="projectLinks">
+            <ul>
+              <li>
+                <a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">Get Advice</a>
+              </li>
+              <li>
+                <a href="https://github.com/ihatetoast/creepyman-advice" target="_blank">Code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </article>
+
+  </main>
+  <!-- end port main-->
+  </div>
+  <!--end site-content-->
+</body>
+
 </html>
 
 
