--- a/index.html
+++ b/index.html
@@ -1,136 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">	
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Katy Cassidy's UI, frontend, and fullstack portfolio as IHateToast.">
-		<meta name=“author" content=“Katy Cassidy | ihatetoast">
-		<title>Katy Cassidy</title>
-		<link href="https://fonts.googleapis.com/css?family=Asul|Chivo" rel="stylesheet">
-		<link rel="stylesheet" href="./assets/styles/reset.css">
-		<link rel="stylesheet" href="./assets/styles/style.css">
-		<link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
-	</head>
-	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
-	<body class='site'>
-		<header>
-			<div class="content-header">
-				<div class="brand">
-					<div class="name">
-						<h1>Katy <div id="ihtlogo"><img  src="./assets/images/ihtLogo.png" alt="greyhound eating toast"></div>
-						 Cassidy</h1>
-					</div>
-				</div>
 
-				<nav>
-					<ul id="navLinks">
-						<li><a class="active" href="./index.html">about</a></li>
-						<li><a class="inactive" href="./projects.html">portfolio</a></li>
-						<li><a class="inactive" href="./contact.html">contact</a></li>
-					</ul>
-				</nav>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Katy Cassidy's UI, frontend, and fullstack portfolio as IHateToast.">
+  <meta name="author" content="Katy Cassidy | ihatetoast">
+  <title>Katy Cassidy</title>
+  <link href="https://fonts.googleapis.com/css?family=Asul|Chivo" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/styles/reset.css">
+  <link rel="stylesheet" href="./assets/styles/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
+</head>
+<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
-			</div>
-		</header>
- 	
-		<section class="main site-content">
+<body class='site'>
+  <header>
+    <div class="content-header">
+      <div class="brand">
+        <div class="name">
+          <h1>Katy
+            <div id="ihtlogo">
+              <img src="./assets/images/ihtLogo.png" alt="greyhound eating toast">
+            </div>
+            Cassidy</h1>
+        </div>
+      </div>
 
-			<article class="aboutContent">
-				<h3 class="titleHeader">About Me</h3>
-				<hr>
-				<div class="imgWithText">
-          <img src="./assets/images/couch.svg" alt="svg illustration of a dog and a woman on a couch" class="aboutImg">
-          <div>
-              <p>Programming got its hooks into me when I taught 4th-grade math and used MicroWorlds to augment my lessons. It was the first time I understood that coding was creative, fun, and for anyone. As I teach Python to middle schoolers, I ensure my students see the creativity–logic connection. And to anyone who'll listen, I campaign to encourage coding as a habit and passtime, like reading, knitting, and jogging. </p>
-              <p>Everything I’ve learned and done for a living comes together with programming: linguistics, writing, math; and I can use creativity and logic to build apps that make people’s lives better.</p>
-          </div>
-			  </div>
-			</article>
+      <nav>
+        <ul id="navLinks">
+          <li>
+            <a class="active" href="./index.html">about</a>
+          </li>
+          <li>
+            <a class="inactive" href="./projects.html">portfolio</a>
+          </li>
+          <li>
+            <a class="inactive" href="./contact.html">contact</a>
+          </li>
+        </ul>
+      </nav>
 
-			<aside class="socialMedia">
-				<div >
-					<h3 class="titleHeader">Find Me</h3>
-					<hr>
-					<div class="socialMedia-container">
+    </div>
+  </header>
 
-						<a href="https://github.com/ihatetoast" target="_blank" class="socialMedia-holder gitHub">
-							<div class="block">
-								<div class="socialMediaPlatform">
-									GitHub
-								</div>
-								<div class="socialMediaHandle">
-									<i class="fa fa-github fa-lg github icons" id="dribbble" aria-hidden="true"></i>
-									<span>ihatetoast</span>
-								</div>
-							</div>
-						</a>
+  <section class="main site-content">
 
-						<a href="https://codepen.io/ihatetoast/" target="_blank" class="socialMedia-holder codePen">
-							<div class="block">
-								<div class="socialMediaPlatform">
-									CodePen
-								</div>
-								<div class="socialMediaHandle">
-									<i class="fa fa-codepen fa-lg codepen icons" id="codePen" aria-hidden="true"></i>
-									<span>ihatetoast</span>
-								</div>
-							</div>
-						</a>
-						
-						<a href="https://dribbble.com/ihatetoast" target="_blank" class="socialMedia-holder dribbble">
-							<div class="block">
-								<div class="socialMediaPlatform">
-									Dribbble
-								</div>
-								<div class="socialMediaHandle">
-									<i class="fa fa-dribbble fa-lg dribbble icons" id="dribbble" aria-hidden="true"></i>
-									<span>ihatetoast</span>
-								</div>
-							</div>
-						</a>
+    <article class="aboutContent">
+      <h3 class="titleHeader">About Me</h3>
+      <hr>
+      <div class="imgWithText">
+        <img src="./assets/images/couch.svg" alt="svg illustration of a dog and a woman on a couch" class="aboutImg">
+        <div>
+          <p>I am a frontend-leaning fullstack developer. Although I love algorithms and data, I prefer the visual side. 
+            The frontend is where I prefer to live. The backend is NYC: love going there, getting things, bringing things back. 
+            I do not want to live there. I am looking for a role where I can grow my ReactJS skills and bud my SvelteJS and VueJS ones.</p>
+          <p>Programming got its hooks into me when I taught 4th-grade math and used MicroWorlds to augment math lessons. It was
+            the first time I understood that coding was creative, fun, and for anyone. When I taught Python to middle schoolers,
+            I ensured that my students could see the creativity–logic connection. And to anyone who'll listen, I campaign to encourage
+            coding as a habit and passtime, like reading, knitting, and jogging. </p>
+          <p>Everything I’ve learned and done for a living comes together with programming: linguistics, writing, math; and
+            I can use creativity and logic to build apps that make people’s lives better.</p>
+            <p>Current site (Gatsby/GraphQL) is underconstruction as I get my React Hooks into it. </p>
+        </div>
+      </div>
+    </article>
 
-						<a href="https://twitter.com/i_hate_toast" target="_blank" class="socialMedia-holder twitter">
-							<div class="block">
-								<div class="socialMediaPlatform">
-									Twitter
-								</div>
-								<div class="socialMediaHandle">
-									<i class="fa fa-twitter fa-lg twitter icons" id="twitter" aria-hidden="true"></i>
-									<span>@i_hate_toast</span>
-								</div>
-							</div>
-						</a>
+    <aside class="socialMedia">
+      <div>
+        <h3 class="titleHeader">Find Me</h3>
+        <hr>
+        <div class="socialMedia-container">
 
-						<a href="https://ihatetoast.io/" target="_blank" class="socialMedia-holder wordPress">
-							<div class="block">
-								<div class="socialMediaPlatform">
-									WordPress
-								</div>
-								<div class="socialMediaHandle">
-									<i class="fa fa-wordpress fa-lg wordPress icons" id="wordPress" aria-hidden="true"></i>
-									<span>ihatetoast</span>
-								</div>
-							</div>
-						</a>
-						<a href="https://www.linkedin.com/in/cassidykaty/" target="_blank" class="socialMedia-holder linkedIn">
-							<div class="block">
-								<div class="socialMediaPlatform">
-									LinkedIn
-								</div>
-								<div class="socialMediaHandle">
-									<i class="fa fa-linkedin fa-lg linkedIn icons" id="linkedin" aria-hidden="true"></i>
-									<span>ihatetoast</span>
-								</div>
-							</div>
-						</a>
+          <a href="https://github.com/ihatetoast" target="_blank" class="socialMedia-holder gitHub">
+            <div class="block">
+              <div class="socialMediaPlatform">
+                GitHub
+              </div>
+              <div class="socialMediaHandle">
+                <i class="fa fa-github fa-lg github icons" id="dribbble" aria-hidden="true"></i>
+                <span>ihatetoast</span>
+              </div>
+            </div>
+          </a>
 
-					</div>
-					<div class="clear"></div>
-				</div>
-			</aside>
-		</section> <!-- END #MAIN -->
-		<footer>
-			<p>Katy Cassidy | ihatetoast </p>
-		</footer>
-	</body>
+          <a href="https://codepen.io/ihatetoast/" target="_blank" class="socialMedia-holder codePen">
+            <div class="block">
+              <div class="socialMediaPlatform">
+                CodePen
+              </div>
+              <div class="socialMediaHandle">
+                <i class="fa fa-codepen fa-lg codepen icons" id="codePen" aria-hidden="true"></i>
+                <span>ihatetoast</span>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://dribbble.com/ihatetoast" target="_blank" class="socialMedia-holder dribbble">
+            <div class="block">
+              <div class="socialMediaPlatform">
+                Dribbble
+              </div>
+              <div class="socialMediaHandle">
+                <i class="fa fa-dribbble fa-lg dribbble icons" id="dribbble" aria-hidden="true"></i>
+                <span>ihatetoast</span>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://twitter.com/i_hate_toast" target="_blank" class="socialMedia-holder twitter">
+            <div class="block">
+              <div class="socialMediaPlatform">
+                Twitter
+              </div>
+              <div class="socialMediaHandle">
+                <i class="fa fa-twitter fa-lg twitter icons" id="twitter" aria-hidden="true"></i>
+                <span>@i_hate_toast</span>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://ihatetoast.io/" target="_blank" class="socialMedia-holder wordPress">
+            <div class="block">
+              <div class="socialMediaPlatform">
+                WordPress
+              </div>
+              <div class="socialMediaHandle">
+                <i class="fa fa-wordpress fa-lg wordPress icons" id="wordPress" aria-hidden="true"></i>
+                <span>ihatetoast</span>
+              </div>
+            </div>
+          </a>
+          <a href="https://www.linkedin.com/in/cassidykaty/" target="_blank" class="socialMedia-holder linkedIn">
+            <div class="block">
+              <div class="socialMediaPlatform">
+                LinkedIn
+              </div>
+              <div class="socialMediaHandle">
+                <i class="fa fa-linkedin fa-lg linkedIn icons" id="linkedin" aria-hidden="true"></i>
+                <span>ihatetoast</span>
+              </div>
+            </div>
+          </a>
+
+        </div>
+        <div class="clear"></div>
+      </div>
+    </aside>
+  </section>
+  <!-- END #MAIN -->
+  <footer>
+    <p>Katy Cassidy | ihatetoast </p>
+  </footer>
+</body>
+
 </html>
