--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             coding as a habit and passtime, like reading, knitting, and jogging. </p>
           <p>Everything I’ve learned and done for a living comes together with programming: linguistics, writing, math; and
             I can use creativity and logic to build apps that make people’s lives better.</p>
-            <p>Current site (Gatsby/GraphQL) is underconstruction as I get my React Hooks into it. </p>
+            <p>The Gatsby/GraphQL site is underconstruction as I get my React Hooks honed and code cleaned. </p>
         </div>
       </div>
     </article>
