--- a/projects.html
+++ b/projects.html
@@ -40,11 +40,11 @@
     </div>
   </header>
   <main class="portMain">
-   
-   
+    <div class="titleHeader">
+        <h2>Projects: Some big, some small, all fun</h2>
+      </div>
     <article class="portContent">
-      <h3 class="titleHeader">Personal Projects: Some big, some small, all fun</h3>
-      <br />
+      
       <div class="projectHolder">
                <!-- WORK'S SITE -->
                <div class="profProjHolder">
