--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                       <img src="./assets/images/jobsnippet.png" alt="landing page">
                     </div>
                     <div class="titleBar">
-                      <p>Current Company's site</p>
+                      <p>My employer's site</p>
                     </div>
                     <div class="projectLinks">
                       <ul>
@@ -77,7 +77,7 @@
                           <img src="./assets/images/rivmr.png" alt="landing page">
                         </div>
                         <div class="titleBar">
-                          <p>Gatsby site with WordPress backend</p>
+                          <p>Gatsby site for client</p>
                         </div>
                         <div class="projectLinks">
                           <ul>
