--- a/index.html
+++ b/index.html
@@ -37,16 +37,7 @@
       <div class="imgWithText">
         <img src="./assets/images/couch.svg" alt="svg illustration of a dog and a woman on a couch" class="aboutImg">
         <div>
-          <p>I am a frontend-leaning fullstack developer. Although I love algorithms and data, I prefer the visual side. 
-            The frontend is where I prefer to live. The backend is NYC: love going there, getting things, bringing things back. 
-            I do not want to live there. I am looking for a role where I can grow my ReactJS skills and bud my SvelteJS and VueJS ones.</p>
-          <p>Programming got its hooks into me when I taught 4th-grade math and used MicroWorlds to augment math lessons. It was
-            the first time I understood that coding was creative, fun, and for anyone. When I taught Python to middle schoolers,
-            I ensured that my students could see the creativity–logic connection. And to anyone who'll listen, I campaign to encourage
-            coding as a habit and passtime, like reading, knitting, and jogging. </p>
-          <p>Everything I’ve learned and done for a living comes together with programming: linguistics, writing, math; and
-            I can use creativity and logic to build apps that make people’s lives better.</p>
-            <p>The Gatsby/GraphQL site is underconstruction as I get my React Hooks honed and code cleaned. </p>
+         REDO
         </div>
       </div>
     </article>
